--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+CHANGES IN VERSION 1.8.1
+-------------------------
+o Rename the miRsponge package called miRspongeR, and add zzz.R file to points users to the new package ‘miRspongeR’ <2019-03-07, Thur>.
+
 CHANGES IN VERSION 1.7.5
 -------------------------
 o Update miRsponge.Rmd <2018-08-25, Sat>.
